# node-ffi-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  ImSDK.lib  README.md  README_Zh.md  bench.js  build.rs  index.d.ts  index.js  mac_test.js  memory.js  package.json  pnpm-lock.yaml  sum.cpp  test.js  test.ts  test32.cpp  testforwin32.js
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue---.md
.github/workflows/: CI.yml
.tencent-im/sdk-config/: imsdk_config_1400187352
.tencent-im/sdk-log/: imsdk_C.mmap2  imsdk_C_20240108.xlog
__test__/: index.spec.mjs
bench/: bench.js
cpp/: sum.cpp  sum.h
npm/android-arm64/: package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-ia32-msvc/: package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: build.js  compile.js  cpp.js  preinstall.js  publish.js  type.js  types.d.ts
src/: bindings.rs  define.rs  ffi_macro.rs  foo.rs  lib.rs  pointer.rs  utils.rs
src/datatype/: array.rs  buffer.rs  create_struct.rs  function.rs  mod.rs  object.rs  object_calculate.rs  object_generate.rs  object_utils.rs  pointer.rs  restore_struct.rs  string.rs
src/utils/: array.rs  calculate.rs  dataprocess.rs  js_value.rs  mod.rs  object_utils.rs  pointer.rs  struct_utils.rs  transform.rs
tests/: index.ts  issue-134.ts  issue-135.ts  leak.js  struct.ts  types.ts  utils.ts
yuuangtest/: imsdk_C.mmap2  imsdk_C_20240108.xlog  imsdk_config_1400187352  imsdk_sensitive_word_1400187352
yuuangtest/1400187352_313039343432/: im.db  im.db-shm  im.db-wal  msg_0.db-shm  msg_0.db-wal
