[package]
edition = "2021"
name = "ffi-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.13.0"
napi-derive-backend="1.0.52"
libloading = "0.8"
libffi = { version = "3.2.0" }
libffi-sys = { version = "^2.3.0" }
libc="0.2"
indexmap="2.0"
tokio = { version = "1", features = ["full"] }
rusty_v8 = "0.26.0"


[build-dependencies]
napi-build = "2.0.1"
bindgen = "^0.66.0"

[profile.release]
lto = true
