[package]
edition = "2021"
name = "node-ffi-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
libloading = "0.8"
libffi = { version = "3.2.0" }
libffi-sys = "2.3.0"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true

[profile.dev]
# rustflags = ["-A dead_code"]